--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -152,19 +152,33 @@
                         android:layout_centerInParent="true"
                         android:drawablePadding="4dp"
                         android:gravity="center"
-                        android:paddingStart="4dp"
                         android:paddingTop="10dp"
-                        android:paddingEnd="4dp"
                         android:paddingBottom="8dp"
                         android:text="Like"
                         android:textColor="@color/black"
                         app:drawableStartCompat="@drawable/ic_like" />
                 </RelativeLayout>
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="#30000000" />
+
+                <RelativeLayout
+                    android:id="@+id/containerRate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tvRate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:drawablePadding="4dp"
+                        android:gravity="center"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="8dp"
+                        android:text="Rate"
+                        android:textColor="@color/black"
+                        app:drawableStartCompat="@drawable/baseline_star_border_24" />
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/containerComment"
@@ -178,9 +192,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:drawablePadding="4dp"
-                        android:paddingStart="4dp"
                         android:paddingTop="10dp"
-                        android:paddingEnd="4dp"
                         android:paddingBottom="8dp"
                         android:text="Comment"
                         android:textColor="@color/black"
